fixed bug with grid display on mobile

--- a/src/features/dashboard/components/cards/dashboard-cards/Card.module.css
+++ b/src/features/dashboard/components/cards/dashboard-cards/Card.module.css
@@ -25,6 +25,7 @@
     gap: var(--padding-block-medium);
     position: relative;
     z-index: 1;
+    overflow: hidden;
 }
 
 .title {
