--- a/src/features/dashboard/components/document-card-display/DocumentCardDisplay.module.css
+++ b/src/features/dashboard/components/document-card-display/DocumentCardDisplay.module.css
@@ -122,8 +122,11 @@
 
 @media screen and (max-width: 700px) {
     .resumesContainer {
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        width: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
     }
 }
 
